--- a/conf/DEV.conf
+++ b/conf/DEV.conf
@@ -24,3 +24,10 @@ events {
 
 discussion.api.url = "https://discussion.code.dev-theguardian.com/discussion-api"
 madgex.host="https://guardianjobs-web.madgexjbtest.com"
+
+postgres {
+  jdbcUrl = "jdbc:postgresql://localhost:5555/identitydb"
+  username = "username"
+  password = "password"
+  maxPoolSize = 2
+}
