--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,7 @@ tip {
 search-validation {
   minimumQueryLength = 2
   maximumLimit = 20
+  maximumOffset = 100
 }
 
 play.modules.enabled += "configuration.PostgresModule"
