Add ELK logging

--- a/cloudformation/identity-admin-api.yaml
+++ b/cloudformation/identity-admin-api.yaml
@@ -173,6 +173,11 @@ Resources:
           - Effect: Allow
             Action: ses:SendEmail
             Resource: '*'
+          - Effect: Allow
+            Action:
+            - kinesis:Describe*
+            - kinesis:Put*
+            Resource: '*'
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
