--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,7 +37,10 @@ search-validation {
   maximumOffset = 100
 }
 
+logging.kinesisStream = "identity-logging-PROD-KinesisStream-G0Y2BTGKK20H"
+
 play.modules.enabled += "configuration.PostgresModule"
+play.modules.enabled += "configuration.LoggingModule"
 
 include file("/etc/gu/identity-admin-api.conf")
 
