--- a/cloudformation/identity-admin-api.yaml
+++ b/cloudformation/identity-admin-api.yaml
@@ -94,6 +94,9 @@ Parameters:
     Description: Port that the app listens on
     Type: Number
     Default: 9500
+  KinesisStream:
+    Description: Kinesis Stream for logging
+    Type: String
 Mappings:
   StageVariables:
     PROD:
@@ -321,6 +324,8 @@ Resources:
                 file {
                     add_field => {
                         'application' => '${App}'
+                        'app' => '${App}'
+                        'stack' => '${Stack}'
                         'stage' => '${Stage}'
                         'ec2_instance' => '$instanceid'
                     }
@@ -331,6 +336,8 @@ Resources:
                 file {
                     add_field => {
                         'application' => '${App}'
+                        'app' => '${App}'
+                        'stack' => '${Stack}'
                         'stage' => '${Stage}'
                         'ec2_instance' => '$instanceid'
                     }
@@ -338,6 +345,12 @@ Resources:
                     type => "access"
                     start_position => "beginning"
                 }
+            }
+            output {
+              kinesis {
+                stream_name => "${KinesisStream}"
+                region => "eu-west-1"
+              }
             }
             output {
                 stdout { }
