SSM managed policy

--- a/cloudformation/identity-admin-api.yaml
+++ b/cloudformation/identity-admin-api.yaml
@@ -94,6 +94,9 @@ Parameters:
     Description: Port that the app listens on
     Type: Number
     Default: 9500
+  SsmManagedPolicyArn:
+    Description: ARN of the managed policy to allow SSM
+    Type: String
 Mappings:
   StageVariables:
     PROD:
@@ -135,6 +138,8 @@ Resources:
           Action:
           - sts:AssumeRole
       Path: /
+      ManagedPolicyArns:
+        - !Ref SsmManagedPolicyArn
       Policies:
       - PolicyName: root
         PolicyDocument:
