parameterise region and account

--- a/cloudformation/identity-admin-api.yaml
+++ b/cloudformation/identity-admin-api.yaml
@@ -186,7 +186,7 @@ Resources:
             - kinesis:Describe*
             - kinesis:Put*
             Resource:
-            - arn:aws:kinesis:eu-west-1:942464564246:stream/identity-logging-PROD-KinesisStream-G0Y2BTGKK20H
+            - !Sub arn:aws:kinesis:${AWS::Region}:${AWS::AccountId}:stream/${KinesisStream}
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
